Change default memory settings and create database if not exists